--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Header Banner -->
     <div class="header">
-        <img src="img/banna2.PNG">
+        <img src="img/bana2.PNG">
     </div>
 
     <!-- Main Content -->
