--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 
-    <!-- Navigation -->
+    <!-- NAVIGATION -->
     <div class="nav">
         <a href="#">Home</a>
         <a href="#">Finance</a>
@@ -18,90 +18,104 @@
         <a href="#">Contact Us</a>
     </div>
 
-    <!-- Header Banner -->
+    <!-- HEADER IMAGE -->
     <div class="header">
         <img src="img/bana2.PNG">
     </div>
 
-    <!-- Main Content -->
-    <div class="main">
+    <!-- MAIN CONTENT -->
+    <div class="content">
 
-        <!-- Left Section -->
-        <div class="left">
-            <img src="img/clothes.PNG" class="clothes">
+        <!-- LEFT PANEL -->
+        <div class="left-panel">
 
-            <div class="coat">
+            <div class="left-box">
+                <img src="img/cloth1.jpg">
+            </div>
+
+            <div class="left-item">
                 <h3>Golden Coat</h3>
-                <img src="img/golden.PNG">
+                <img src="img/cloth3.jpg">
             </div>
 
-            <div class="coat">
+            <div class="left-item">
                 <h3>Smart Coat</h3>
-                <img src="img/smart.PNG">
+                <img src="img/cloth2.jpg">
             </div>
-        </div>
-
-        <!-- Right Section -->
-        <div class="right">
-
-            <h2>Start selling online</h2>
-
-            <p>
-                Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
-            </p>
-
-            <h3>Other products:</h3>
-
-            <ul>
-                <li>T- Shirts</li>
-                <li>Handcaschiefs</li>
-                <li>Shoes</li>
-                <li>Tablets</li>
-                <li>etc...</li>
-            </ul>
-
-            <p>If you need some from these products please fill the form to register</p>
-
-            <form>
-                First-Name: <input type="text"><br>
-                Last-Name: <input type="text"><br>
-                Address: <input type="text"><br>
-                Telephone: <input type="text"><br>
-                User-Name: <input type="text"><br>
-                Password: <input type="password"><br><br>
-
-                <input type="submit" value="SUBMIT">
-                <input type="button" value="FETCH">
-            </form>
 
         </div>
+
+        <!-- RIGHT PANEL -->
+        <div class="right-panel">
+
+            <div class="top-section">
+                <h2>Start selling online</h2>
+
+                <p>
+                    Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
+                </p>
+
+                <h3>Other products:</h3>
+
+                <ul>
+                    <li>T- Shirts</li>
+                    <li>Handcaschiefs</li>
+                    <li>Shoes</li>
+                    <li>Tablets</li>
+                    <li>etc...</li>
+                </ul>
+            </div>
+
+            <div class="bottom-section">
+                <p>If you need some from these products please fill the form to register</p>
+
+                <form>
+                    First-Name: <input type="text"><br>
+                    Last-Name: <input type="text"><br>
+                    Address: <input type="text"><br>
+                    Telephone: <input type="text"><br>
+                    User-Name: <input type="text"><br>
+                    Password: <input type="password"><br><br>
+
+                    <input type="submit" value="SUBMIT">
+                    <input type="button" value="FETCH">
+                </form>
+            </div>
+
+        </div>
+
     </div>
 
-    <!-- Social Media -->
+    <!-- SOCIAL TITLE BAR -->
+    <div class="social-title">
+        Contact us from the following social Media:
+    </div>
+
+    <!-- SOCIAL SECTION -->
     <div class="social">
 
-        <div class="box">
+        <div class="social-box">
             <h4>Facebook</h4>
-            <img src="img/facebook.PNG">
-            <p>engineering_info</p>
+            <img src="img/facb.jpg">
+            <a href="#">engineering_info</a>
         </div>
 
-        <div class="box">
+        <div class="social-box">
             <h4>Tweeter</h4>
-            <img src="img/tweet.PNG">
-            <p>#eng_info</p>
+            <img src="img/twee.jpg">
+            <a href="#">#eng_info</a>
         </div>
 
-        <div class="box">
+        <div class="social-box">
             <h4>Instagram</h4>
-            <img src="img/instagram.PNG">
-            <p>engineering_info</p>
+            <img src="img/inst.png">
+            <a href="#">engineering_info</a>
         </div>
 
-        <div class="box">
+        <div class="social-box">
             <h4>Gmail</h4>
-            <img src="img/gmail.PNG">
-            <p>enginfo@gmail.com</p>
+            <img src="img/gmail.jpg">
+            <a href="#">enginfo@gmail.com</a>
         </div>
 
     </div>
