--- a/index.html
+++ b/index.html
@@ -1,121 +1,114 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Products Online Marketing</title>
-    <link rel="stylesheet" href="style.css">
+    <title>PRODUCTS ONLINE MARKTING</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<div class="container">
+<div class="main">
 
-    <!-- NAVIGATION -->
-    <div class="nav">
-        <a href="#">Home</a>
-        <a href="#">Finance</a>
-        <a href="#">Products</a>
-        <a href="#">Address</a>
-        <a href="#">Help</a>
-        <a href="#">Contact Us</a>
+    <!-- Navigation -->
+    <div class="menu">
+        <ul>
+            <li>Home</li>
+            <li>Finance</li>
+            <li>Products</li>
+            <li>Address</li>
+            <li>Help</li>
+            <li>Contact Us</li>
+        </ul>
     </div>
 
-    <!-- HEADER IMAGE -->
+    <!-- Header -->
     <div class="header">
-        <img src="img/bana2.PNG">
+        <h1>PRODUCTS ONLINE MARKTING</h1>
     </div>
 
-    <!-- MAIN CONTENT -->
     <div class="content">
 
-        <!-- LEFT PANEL -->
-        <div class="left-panel">
+        <!-- Left Column -->
+        <div class="left">
 
-            <div class="left-box">
-                <img src="img/cloth1.jpg">
-            </div>
+            <img src="img/cloth1.jpg" class="big-img">
 
-            <div class="left-item">
+            <div class="coat">
                 <h3>Golden Coat</h3>
                 <img src="img/cloth3.jpg">
             </div>
 
-            <div class="left-item">
+            <div class="coat">
                 <h3>Smart Coat</h3>
                 <img src="img/cloth2.jpg">
             </div>
 
         </div>
 
-        <!-- RIGHT PANEL -->
-        <div class="right-panel">
+        <!-- Right Column -->
+        <div class="right">
 
-            <div class="top-section">
-                <h2>Start selling online</h2>
+            <h2>Start selling online</h2>
 
-                <p>
-                    Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
-                </p>
+            <p>
+                Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
+            </p>
 
-                <h3>Other products:</h3>
+            <h3>Other products:</h3>
+            <ul>
+                <li>T- Shirts</li>
+                <li>Handcashiefs</li>
+                <li>Shoes</li>
+                <li>Tablets</li>
+                <li>etc...</li>
+            </ul>
 
-                <ul>
-                    <li>T- Shirts</li>
-                    <li>Handcaschiefs</li>
-                    <li>Shoes</li>
-                    <li>Tablets</li>
-                    <li>etc...</li>
-                </ul>
-            </div>
+            <p>If you need some from these products please fill the form to register</p>
 
-            <div class="bottom-section">
-                <p>If you need some from these products please fill the form to register</p>
-
-                <form>
-                    First-Name: <input type="text"><br>
-                    Last-Name: <input type="text"><br>
-                    Address: <input type="text"><br>
-                    Telephone: <input type="text"><br>
-                    User-Name: <input type="text"><br>
-                    Password: <input type="password"><br><br>
-
-                    <input type="submit" value="SUBMIT">
-                    <input type="button" value="FETCH">
-                </form>
+            <div class="form">
+                <label>First-Name:</label><input type="text"><br>
+                <label>Last-Name:</label><input type="text"><br>
+                <label>Address:</label><input type="text"><br>
+                <label>Telephone:</label><input type="text"><br>
+                <label>User-Name:</label><input type="text"><br>
+                <label>Password:</label><input type="password"><br>
+                <button>SUBMIT</button>
+                <button>FETCH</button>
             </div>
 
         </div>
 
     </div>
 
-    <!-- SOCIAL TITLE BAR -->
+    <!-- Social Media -->
     <div class="social-title">
         Contact us from the following social Media:
     </div>
 
-    <!-- SOCIAL SECTION -->
     <div class="social">
 
-        <div class="social-box">
+        <div class="box">
             <h4>Facebook</h4>
             <img src="img/facb.jpg">
-            <a href="#">engineering_info</a>
+            <p>engineering_info</p>
         </div>
 
-        <div class="social-box">
+        <div class="box">
             <h4>Tweeter</h4>
             <img src="img/twee.jpg">
-            <a href="#">#eng_info</a>
+            <p>#eng_info</p>
         </div>
 
-        <div class="social-box">
+        <div class="box">
             <h4>Instagram</h4>
             <img src="img/inst.png">
-            <a href="#">engineering_info</a>
+            <p>engineering_info</p>
         </div>
 
-        <div class="social-box">
+        <div class="box">
             <h4>Gmail</h4>
             <img src="img/gmail.jpg">
-            <a href="#">enginfo@gmail.com</a>
+            <p>enginfo@gmail.com</p>
         </div>
 
     </div>
