--- a/index.html
+++ b/index.html
@@ -1,79 +1,85 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PRODUCTS ONLINE MARKTING</title>
+    <title>Products Online Marketing</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<div class="main">
+<div class="main-container">
 
     <!-- Navigation -->
-    <div class="menu">
-        <ul>
-            <li>Home</li>
-            <li>Finance</li>
-            <li>Products</li>
-            <li>Address</li>
-            <li>Help</li>
-            <li>Contact Us</li>
-        </ul>
+    <div class="nav">
+        <a href="#">Home</a>
+        <a href="#">Finance</a>
+        <a href="#">Products</a>
+        <a href="#">Address</a>
+        <a href="#">Help</a>
+        <a href="#">Contact Us</a>
     </div>
 
-    <!-- Header -->
-    <div class="header">
-        <h1>PRODUCTS ONLINE MARKTING</h1>
+    <!-- Banner -->
+    <div class="banner">
+        <img src="img/bana2.PNG" alt="Banner">
     </div>
 
+    <!-- Content Section -->
     <div class="content">
 
-        <!-- Left Column -->
+        <!-- Left Side -->
         <div class="left">
 
-            <img src="img/cloth1.jpg" class="big-img">
-
-            <div class="coat">
-                <h3>Golden Coat</h3>
-                <img src="img/cloth3.jpg">
+            <div class="nursing">
+                <img src="img/cloth1.jpg" alt="">
             </div>
 
-            <div class="coat">
+            <div class="coat-section">
+                <h3>Golden Coat</h3>
+                <img src="img/cloth3.jpg" alt="">
+            </div>
+
+            <div class="coat-section">
                 <h3>Smart Coat</h3>
-                <img src="img/cloth2.jpg">
+                <img src="img/cloth2.jpg" alt="">
             </div>
 
         </div>
 
-        <!-- Right Column -->
+        <!-- Right Side -->
         <div class="right">
 
-            <h2>Start selling online</h2>
+            <div class="text-section">
+                <h2>Start selling online</h2>
 
-            <p>
-                Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
-            </p>
+                <p>
+                    Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
+                </p>
 
-            <h3>Other products:</h3>
-            <ul>
-                <li>T- Shirts</li>
-                <li>Handcashiefs</li>
-                <li>Shoes</li>
-                <li>Tablets</li>
-                <li>etc...</li>
-            </ul>
+                <h4>Other products:</h4>
 
-            <p>If you need some from these products please fill the form to register</p>
+                <ul>
+                    <li>T- Shirts</li>
+                    <li>Handcaschies</li>
+                    <li>Shoes</li>
+                    <li>Tablets</li>
+                    <li>etc...</li>
+                </ul>
+            </div>
 
-            <div class="form">
-                <label>First-Name:</label><input type="text"><br>
-                <label>Last-Name:</label><input type="text"><br>
-                <label>Address:</label><input type="text"><br>
-                <label>Telephone:</label><input type="text"><br>
-                <label>User-Name:</label><input type="text"><br>
-                <label>Password:</label><input type="password"><br>
-                <button>SUBMIT</button>
-                <button>FETCH</button>
+            <div class="form-section">
+                <p>If you need some from these products please fill the form to register</p>
+
+                <form>
+                    First-Name: <input type="text"><br>
+                    Last-Name: <input type="text"><br>
+                    Address: <input type="text"><br>
+                    Telephone: <input type="text"><br>
+                    User-Name: <input type="text"><br>
+                    Password: <input type="password"><br><br>
+
+                    <input type="submit" value="SUBMIT">
+                    <input type="button" value="FETCH">
+                </form>
             </div>
 
         </div>
@@ -87,28 +93,28 @@
 
     <div class="social">
 
-        <div class="box">
+        <div class="social-box">
             <h4>Facebook</h4>
-            <img src="img/facb.jpg">
-            <p>engineering_info</p>
+            <img src="img/facb.jpg" alt="">
+            <a href="#">engineering_info</a>
         </div>
 
-        <div class="box">
+        <div class="social-box">
             <h4>Tweeter</h4>
-            <img src="img/twee.jpg">
-            <p>#eng_info</p>
+            <img src="img/twee.jpg" alt="">
+            <a href="#">#eng_info</a>
         </div>
 
-        <div class="box">
+        <div class="social-box">
             <h4>Instagram</h4>
-            <img src="img/inst.png">
-            <p>engineering_info</p>
+            <img src="img/inst.png" alt="">
+            <a href="#">engineering_info</a>
         </div>
 
-        <div class="box">
+        <div class="social-box">
             <h4>Gmail</h4>
-            <img src="img/gmail.jpg">
-            <p>enginfo@gmail.com</p>
+            <img src="img/gmail.jpg" alt="">
+            <a href="#">enginfo@gmail.com</a>
         </div>
 
     </div>
