--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-<div class="main-container">
+<div class="container">
 
     <!-- Navigation -->
-    <div class="nav">
+    <div class="navbar">
         <a href="#">Home</a>
         <a href="#">Finance</a>
         <a href="#">Products</a>
@@ -20,35 +20,38 @@
 
     <!-- Banner -->
     <div class="banner">
-        <img src="img/bana2.PNG" alt="Banner">
+        <img src="img/bana2.PNG">
     </div>
 
-    <!-- Content Section -->
-    <div class="content">
+    <!-- Main Section -->
+    <div class="main">
 
-        <!-- Left Side -->
-        <div class="left">
-
-            <div class="nursing">
-                <img src="img/cloth1.jpg" alt="">
+        <!-- Left Sidebar -->
+        <div class="left-sidebar">
+            <div class="left-box">
+                <img src="img/cloth1.jpg">
             </div>
+        </div>
 
-            <div class="coat-section">
+        <!-- Middle Sidebar -->
+        <div class="middle-sidebar">
+
+            <div class="product-box">
                 <h3>Golden Coat</h3>
-                <img src="img/cloth3.jpg" alt="">
+                <img src="img/cloth3.jpg">
             </div>
 
-            <div class="coat-section">
+            <div class="product-box">
                 <h3>Smart Coat</h3>
-                <img src="img/cloth2.jpg" alt="">
+                <img src="img/cloth2.jpg">
             </div>
 
         </div>
 
-        <!-- Right Side -->
-        <div class="right">
+        <!-- Right Content -->
+        <div class="right-content">
 
-            <div class="text-section">
+            <div class="description">
                 <h2>Start selling online</h2>
 
                 <p>
@@ -56,13 +59,12 @@
                 </p>
 
                 <h4>Other products:</h4>
-
                 <ul>
-                    <li>T- Shirts</li>
-                    <li>Handcaschies</li>
+                    <li>T-Shirts</li>
+                    <li>Handkerchiefs</li>
                     <li>Shoes</li>
                     <li>Tablets</li>
-                    <li>etc...</li>
+                    <li>etc.</li>
                 </ul>
             </div>
 
@@ -86,34 +88,35 @@
 
     </div>
 
-    <!-- Social Media -->
-    <div class="social-title">
+    <!-- Footer Title -->
+    <div class="footer-title">
         Contact us from the following social Media:
     </div>
 
-    <div class="social">
+    <!-- Footer Social -->
+    <div class="footer">
 
         <div class="social-box">
             <h4>Facebook</h4>
-            <img src="img/facb.jpg" alt="">
+            <img src="img/facb.jpg">
             <a href="#">engineering_info</a>
         </div>
 
         <div class="social-box">
             <h4>Tweeter</h4>
-            <img src="img/twee.jpg" alt="">
+            <img src="img/twee.jpg">
             <a href="#">#eng_info</a>
         </div>
 
         <div class="social-box">
             <h4>Instagram</h4>
-            <img src="img/inst.png" alt="">
+            <img src="img/inst.png">
             <a href="#">engineering_info</a>
         </div>
 
         <div class="social-box">
             <h4>Gmail</h4>
-            <img src="img/gmail.jpg" alt="">
+            <img src="img/gmail.jpg">
             <a href="#">enginfo@gmail.com</a>
         </div>
 
