--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <title>Products Online Marketing</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <div class="container">
 
-    <!-- Navigation -->
+    <!-- ================= NAVIGATION ================= -->
     <div class="navbar">
         <a href="#">Home</a>
         <a href="#">Finance</a>
@@ -18,105 +19,116 @@
         <a href="#">Contact Us</a>
     </div>
 
-    <!-- Banner -->
+    <!-- ================= BANNER ================= -->
     <div class="banner">
-        <img src="img/bana2.PNG">
+        <img src="img/bana2.PNG" alt="">
     </div>
 
-    <!-- Main Section -->
+    <!-- ================= MAIN SECTION ================= -->
     <div class="main">
 
-        <!-- Left Sidebar -->
+        <!-- LEFT SIDEBAR -->
         <div class="left-sidebar">
             <div class="left-box">
-                <img src="img/cloth1.jpg">
+                <img src="img/cloth1.jpg" alt="">
             </div>
         </div>
 
-        <!-- Middle Sidebar -->
-        <div class="middle-sidebar">
+        <!-- MIDDLE + RIGHT WRAPPER (Shared Border) -->
+        <div class="middle-right-wrapper">
 
-            <div class="product-box">
-                <h3>Golden Coat</h3>
-                <img src="img/cloth3.jpg">
+            <!-- MIDDLE SIDEBAR -->
+            <div class="middle-sidebar">
+
+                <div class="product-box">
+                    <h3>Golden Coat</h3>
+                    <img src="img/cloth3.jpg" alt="">
+                </div>
+
+                <div class="product-box">
+                    <h3>Smart Coat</h3>
+                    <img src="img/cloth2.jpg" alt="">
+                </div>
+
             </div>
 
-            <div class="product-box">
-                <h3>Smart Coat</h3>
-                <img src="img/cloth2.jpg">
+            <!-- RIGHT CONTENT -->
+            <div class="right-content">
+
+                <div class="description">
+                    <h2>Start selling online</h2>
+
+                    <p>
+                        Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
+                    </p>
+
+                    <br>
+
+                    <strong>Other products:</strong>
+
+                    <ul>
+                        <li>T-Shirts</li>
+                        <li>Handkerchiefs</li>
+                        <li>Shoes</li>
+                        <li>Tablets</li>
+                        <li>etc.</li>
+                    </ul>
+                </div>
+
+                <div class="form-section">
+
+                    <p>If you need some from these products please fill the form to register</p>
+
+                    <br>
+
+                    <form>
+                        First-Name: <input type="text"><br>
+                        Last-Name: <input type="text"><br>
+                        Address: <input type="text"><br>
+                        Telephone: <input type="text"><br>
+                        User-Name: <input type="text"><br>
+                        Password: <input type="password"><br><br>
+
+                        <input type="submit" value="SUBMIT">
+                        <input type="button" value="FETCH">
+                    </form>
+
+                </div>
+
             </div>
 
         </div>
-
-        <!-- Right Content -->
-        <div class="right-content">
-
-            <div class="description">
-                <h2>Start selling online</h2>
-
-                <p>
-                    Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
-                </p>
-
-                <h4>Other products:</h4>
-                <ul>
-                    <li>T-Shirts</li>
-                    <li>Handkerchiefs</li>
-                    <li>Shoes</li>
-                    <li>Tablets</li>
-                    <li>etc.</li>
-                </ul>
-            </div>
-
-            <div class="form-section">
-                <p>If you need some from these products please fill the form to register</p>
-
-                <form>
-                    First-Name: <input type="text"><br>
-                    Last-Name: <input type="text"><br>
-                    Address: <input type="text"><br>
-                    Telephone: <input type="text"><br>
-                    User-Name: <input type="text"><br>
-                    Password: <input type="password"><br><br>
-
-                    <input type="submit" value="SUBMIT">
-                    <input type="button" value="FETCH">
-                </form>
-            </div>
-
-        </div>
-
     </div>
 
-    <!-- Footer Title -->
+    <!-- ================= FOOTER TITLE ================= -->
     <div class="footer-title">
         Contact us from the following social Media:
     </div>
 
-    <!-- Footer Social -->
+    <!-- ================= FOOTER ================= -->
     <div class="footer">
 
         <div class="social-box">
             <h4>Facebook</h4>
-            <img src="img/facb.jpg">
+            <img src="img/facb.jpg" alt="">
             <a href="#">engineering_info</a>
         </div>
 
         <div class="social-box">
             <h4>Tweeter</h4>
-            <img src="img/twee.jpg">
+            <img src="img/twee.jpg" alt="">
             <a href="#">#eng_info</a>
         </div>
 
         <div class="social-box">
             <h4>Instagram</h4>
-            <img src="img/inst.png">
+            <img src="img/inst.png" alt="">
             <a href="#">engineering_info</a>
         </div>
 
         <div class="social-box">
             <h4>Gmail</h4>
-            <img src="img/gmail.jpg">
+            <img src="img/gmail.jpg" alt="">
             <a href="#">enginfo@gmail.com</a>
         </div>
 
