--- a/index.html
+++ b/index.html
@@ -7,134 +7,108 @@
 
 <body>
 
-<div class="container">
-
-    <!-- ================= NAVIGATION ================= -->
-    <div class="navbar">
+    <!-- NAVIGATION -->
+    <nav>
         <a href="#">Home</a>
         <a href="#">Finance</a>
         <a href="#">Products</a>
         <a href="#">Address</a>
         <a href="#">Help</a>
         <a href="#">Contact Us</a>
+    </nav>
+
+    <!-- HEADER -->
+    <div class="header">
+        PRODUCTS ONLINE MARKETING
     </div>
 
-    <!-- ================= BANNER ================= -->
-    <div class="banner">
-        <img src="img/bana2.PNG" alt="">
-    </div>
-
-    <!-- ================= MAIN SECTION ================= -->
-    <div class="main">
+    <!-- MAIN CONTAINER -->
+    <div class="main-container">
 
         <!-- LEFT SIDEBAR -->
         <div class="left-sidebar">
-            <div class="left-box">
-                <img src="img/cloth1.jpg" alt="">
-            </div>
+            <img src="cloth1.jpg" alt="Clothes Preview">
         </div>
 
-        <!-- MIDDLE + RIGHT WRAPPER (Shared Border) -->
-        <div class="middle-right-wrapper">
+        <!-- MIDDLE SIDEBAR -->
+        <div class="middle-sidebar">
 
-            <!-- MIDDLE SIDEBAR -->
-            <div class="middle-sidebar">
-
-                <div class="product-box">
-                    <h3>Golden Coat</h3>
-                    <img src="img/cloth3.jpg" alt="">
-                </div>
-
-                <div class="product-box">
-                    <h3>Smart Coat</h3>
-                    <img src="img/cloth2.jpg" alt="">
-                </div>
-
+            <div class="product-box">
+                <h3>Golden Coat</h3>
+                <img src="cloth3.jpg" alt="Golden Coat">
             </div>
 
-            <!-- RIGHT CONTENT -->
-            <div class="right-content">
-
-                <div class="description">
-                    <h2>Start selling online</h2>
-
-                    <p>
-                        Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
-                    </p>
-
-                    <br>
-
-                    <strong>Other products:</strong>
-
-                    <ul>
-                        <li>T-Shirts</li>
-                        <li>Handkerchiefs</li>
-                        <li>Shoes</li>
-                        <li>Tablets</li>
-                        <li>etc.</li>
-                    </ul>
-                </div>
-
-                <div class="form-section">
-
-                    <p>If you need some from these products please fill the form to register</p>
-
-                    <br>
-
-                    <form>
-                        First-Name: <input type="text"><br>
-                        Last-Name: <input type="text"><br>
-                        Address: <input type="text"><br>
-                        Telephone: <input type="text"><br>
-                        User-Name: <input type="text"><br>
-                        Password: <input type="password"><br><br>
-
-                        <input type="submit" value="SUBMIT">
-                        <input type="button" value="FETCH">
-                    </form>
-
-                </div>
-
+            <div class="product-box">
+                <h3>Smart Coat</h3>
+                <img src="cloth2.jpg" alt="Smart Coat">
             </div>
 
         </div>
+
+        <!-- RIGHT CONTENT -->
+        <div class="right-content">
+
+            <h2>Start selling online</h2>
+
+            <p>
+                Easily sell online and ship orders to customers, offer click and collect and local delivery —
+                no matter what type of business you have. Plus, sell on Instagram.
+            </p>
+
+            <br>
+
+            <b>Other products:</b>
+            <ul>
+                <li>T-Shirts</li>
+                <li>Handkerchiefs</li>
+                <li>Shoes</li>
+                <li>Tablets</li>
+            </ul>
+
+            <hr><br>
+
+            <p>If you need some from these products please fill the form to register</p>
+
+            <form>
+                First-Name: <input type="text"><br>
+                Last-Name: <input type="text"><br>
+                Address: <input type="text"><br>
+                Telephone: <input type="text"><br>
+                User-Name: <input type="text"><br>
+                Password: <input type="password"><br><br>
+
+                <input type="submit" value="SUBMIT">
+                <input type="button" value="FETCH">
+            </form>
+
+        </div>
+
     </div>
 
-    <!-- ================= FOOTER TITLE ================= -->
-    <div class="footer-title">
-        Contact us from the following social Media:
-    </div>
-
-    <!-- ================= FOOTER ================= -->
+    <!-- FOOTER -->
     <div class="footer">
 
-        <div class="social-box">
-            <h4>Facebook</h4>
-            <img src="img/facb.jpg" alt="">
-            <a href="#">engineering_info</a>
+        <div>
+            <b>Facebook</b><br><br>
+            <img src="facb.jpg"> engineering_info
         </div>
 
-        <div class="social-box">
-            <h4>Tweeter</h4>
-            <img src="img/twee.jpg" alt="">
-            <a href="#">#eng_info</a>
+        <div>
+            <b>Twitter</b><br><br>
+            <img src="twee.jpg"> #eng_info
         </div>
 
-        <div class="social-box">
-            <h4>Instagram</h4>
-            <img src="img/inst.png" alt="">
-            <a href="#">engineering_info</a>
+        <div>
+            <b>Instagram</b><br><br>
+            <img src="inst.png"> engineering_info
         </div>
 
-        <div class="social-box">
-            <h4>Gmail</h4>
-            <img src="img/gmail.jpg" alt="">
-            <a href="#">enginfo@gmail.com</a>
+        <div>
+            <b>Gmail</b><br><br>
+            <img src="gmail.jpg"> enginfo@gmail.com
         </div>
 
     </div>
-
-</div>
 
 </body>
 </html>
