--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- ================= BANNER ================= -->
     <div class="banner">
-        <img src="img/bana2.PNG" alt="">
+        <img src="img/bana2.PNG" alt="Banner">
     </div>
 
     <!-- ================= MAIN SECTION ================= -->
@@ -30,36 +30,37 @@
         <!-- LEFT SIDEBAR -->
         <div class="left-sidebar">
             <div class="left-box">
-                <img src="img/cloth1.jpg" alt="">
+                <img src="img/cloth1.jpg" alt="Clothing Preview">
             </div>
         </div>
 
-        <!-- MIDDLE + RIGHT WRAPPER (Shared Border) -->
+        <!-- MIDDLE + RIGHT WRAPPER (Shared Border Area) -->
         <div class="middle-right-wrapper">
 
-            <!-- MIDDLE SIDEBAR -->
+            <!-- ================= MIDDLE SIDEBAR ================= -->
             <div class="middle-sidebar">
 
                 <div class="product-box">
                     <h3>Golden Coat</h3>
-                    <img src="img/cloth3.jpg" alt="">
+                    <img src="img/cloth3.jpg" alt="Golden Coat">
                 </div>
 
                 <div class="product-box">
                     <h3>Smart Coat</h3>
-                    <img src="img/cloth2.jpg" alt="">
+                    <img src="img/cloth2.jpg" alt="Smart Coat">
                 </div>
 
             </div>
 
-            <!-- RIGHT CONTENT -->
+            <!-- ================= RIGHT CONTENT ================= -->
             <div class="right-content">
 
                 <div class="description">
                     <h2>Start selling online</h2>
 
                     <p>
-                        Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
+                        Easily sell online and ship orders to customers, offer click and collect and local delivery — 
+                        no matter what type of business you have. Plus, sell on Instagram.
                     </p>
 
                     <br>
@@ -110,25 +111,25 @@
 
         <div class="social-box">
             <h4>Facebook</h4>
-            <img src="img/facb.jpg" alt="">
+            <img src="img/facb.jpg" alt="Facebook">
             <a href="#">engineering_info</a>
         </div>
 
         <div class="social-box">
             <h4>Tweeter</h4>
-            <img src="img/twee.jpg" alt="">
+            <img src="img/twee.jpg" alt="Tweeter">
             <a href="#">#eng_info</a>
         </div>
 
         <div class="social-box">
             <h4>Instagram</h4>
-            <img src="img/inst.png" alt="">
+            <img src="img/inst.png" alt="Instagram">
             <a href="#">engineering_info</a>
         </div>
 
         <div class="social-box">
             <h4>Gmail</h4>
-            <img src="img/gmail.jpg" alt="">
+            <img src="img/gmail.jpg" alt="Gmail">
             <a href="#">enginfo@gmail.com</a>
         </div>
 
