--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="container">
 
-    <!-- ================= NAVIGATION ================= -->
+    <!-- NAVIGATION -->
     <div class="navbar">
         <a href="#">Home</a>
         <a href="#">Finance</a>
@@ -19,48 +19,47 @@
         <a href="#">Contact Us</a>
     </div>
 
-    <!-- ================= BANNER ================= -->
+    <!-- BANNER -->
     <div class="banner">
-        <img src="img/bana2.PNG" alt="Banner">
+        <img src="img/bana2.PNG">
     </div>
 
-    <!-- ================= MAIN SECTION ================= -->
+    <!-- MAIN SECTION -->
     <div class="main">
 
         <!-- LEFT SIDEBAR -->
         <div class="left-sidebar">
             <div class="left-box">
-                <img src="img/cloth1.jpg" alt="Clothing Preview">
+                <img src="img/cloth1.jpg">
             </div>
         </div>
 
-        <!-- MIDDLE + RIGHT WRAPPER (Shared Border Area) -->
+        <!-- MIDDLE + RIGHT (ONE SHARED BORDER) -->
         <div class="middle-right-wrapper">
 
-            <!-- ================= MIDDLE SIDEBAR ================= -->
+            <!-- MIDDLE SIDEBAR -->
             <div class="middle-sidebar">
 
                 <div class="product-box">
                     <h3>Golden Coat</h3>
-                    <img src="img/cloth3.jpg" alt="Golden Coat">
+                    <img src="img/cloth3.jpg">
                 </div>
 
                 <div class="product-box">
                     <h3>Smart Coat</h3>
-                    <img src="img/cloth2.jpg" alt="Smart Coat">
+                    <img src="img/cloth2.jpg">
                 </div>
 
             </div>
 
-            <!-- ================= RIGHT CONTENT ================= -->
+            <!-- RIGHT CONTENT -->
             <div class="right-content">
 
                 <div class="description">
                     <h2>Start selling online</h2>
 
                     <p>
-                        Easily sell online and ship orders to customers, offer click and collect and local delivery — 
-                        no matter what type of business you have. Plus, sell on Instagram.
+                        Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
                     </p>
 
                     <br>
@@ -77,9 +76,7 @@
                 </div>
 
                 <div class="form-section">
-
                     <p>If you need some from these products please fill the form to register</p>
-
                     <br>
 
                     <form>
@@ -93,7 +90,6 @@
                         <input type="submit" value="SUBMIT">
                         <input type="button" value="FETCH">
                     </form>
-
                 </div>
 
             </div>
@@ -101,35 +97,35 @@
         </div>
     </div>
 
-    <!-- ================= FOOTER TITLE ================= -->
+    <!-- FOOTER TITLE -->
     <div class="footer-title">
         Contact us from the following social Media:
     </div>
 
-    <!-- ================= FOOTER ================= -->
+    <!-- FOOTER -->
     <div class="footer">
 
         <div class="social-box">
             <h4>Facebook</h4>
-            <img src="img/facb.jpg" alt="Facebook">
+            <img src="img/facb.jpg">
             <a href="#">engineering_info</a>
         </div>
 
         <div class="social-box">
             <h4>Tweeter</h4>
-            <img src="img/twee.jpg" alt="Tweeter">
+            <img src="img/twee.jpg">
             <a href="#">#eng_info</a>
         </div>
 
         <div class="social-box">
             <h4>Instagram</h4>
-            <img src="img/inst.png" alt="Instagram">
+            <img src="img/inst.png">
             <a href="#">engineering_info</a>
         </div>
 
         <div class="social-box">
             <h4>Gmail</h4>
-            <img src="img/gmail.jpg" alt="Gmail">
+            <img src="img/gmail.jpg">
             <a href="#">enginfo@gmail.com</a>
         </div>
 
