--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
         <img src="img/bana2.PNG">
     </div>
 
-    <!-- MAIN SECTION -->
+    <!-- MAIN -->
     <div class="main">
 
-        <!-- LEFT SIDEBAR -->
+        <!-- LEFT -->
         <div class="left-sidebar">
             <div class="left-box">
                 <img src="img/cloth1.jpg">
             </div>
         </div>
 
-        <!-- MIDDLE + RIGHT (ONE SHARED BORDER) -->
+        <!-- MIDDLE + RIGHT (ONE BIG BORDER) -->
         <div class="middle-right-wrapper">
 
-            <!-- MIDDLE SIDEBAR -->
+            <!-- MIDDLE -->
             <div class="middle-sidebar">
 
                 <div class="product-box">
@@ -52,7 +52,7 @@
 
             </div>
 
-            <!-- RIGHT CONTENT -->
+            <!-- RIGHT -->
             <div class="right-content">
 
                 <div class="description">
@@ -61,8 +61,6 @@
                     <p>
                         Easily sell online and ship orders to customers, offer click and collect and local delivery—no matter what type of business you have. Plus, sell on Instagram,
                     </p>
-
-                    <br>
 
                     <strong>Other products:</strong>
 
@@ -77,7 +75,6 @@
 
                 <div class="form-section">
                     <p>If you need some from these products please fill the form to register</p>
-                    <br>
 
                     <form>
                         First-Name: <input type="text"><br>
@@ -95,6 +92,7 @@
             </div>
 
         </div>
+
     </div>
 
     <!-- FOOTER TITLE -->
