--- a/index.html
+++ b/index.html
@@ -105,26 +105,34 @@
 
         <div class="social-box">
             <h4>Facebook</h4>
-            <img src="img/facb.jpg">
-            <a href="#">engineering_info</a>
+            <div class="social-content">
+                <img src="img/facb.jpg">
+                <a href="#">engineering_info</a>
+            </div>
         </div>
 
         <div class="social-box">
             <h4>Tweeter</h4>
-            <img src="img/twee.jpg">
-            <a href="#">#eng_info</a>
+            <div class="social-content">
+                <img src="img/twee.jpg">
+                <a href="#">#eng_info</a>
+            </div>
         </div>
 
         <div class="social-box">
             <h4>Instagram</h4>
-            <img src="img/inst.png">
-            <a href="#">engineering_info</a>
+            <div class="social-content">
+                <img src="img/inst.png">
+                <a href="#">engineering_info</a>
+            </div>
         </div>
 
         <div class="social-box">
             <h4>Gmail</h4>
-            <img src="img/gmail.jpg">
-            <a href="#">enginfo@gmail.com</a>
+            <div class="social-content">
+                <img src="img/gmail.jpg">
+                <a href="#">enginfo@gmail.com</a>
+            </div>
         </div>
 
     </div>
